[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "run-server"
path = "src/bin/run_server.rs"

[[bin]]
name = "run-client"
path = "src/bin/run_client.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "3.1.18", features = ["derive"] }
atoi = "0.3.2"
